# sidapy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
src/: common.cuh  pybind_main.cpp
src/add/: add.cpp
src/hw7q3_forest_fire/: hw7q3_forest_fire.cu  hw7q3_forest_fire.h
src/label/: common.cuh  ironhide.cu  ironhide.cu.bak  label.cpp  label.h  mit_rahimi.h
src/my_func/: my_func.cu
tests/: test.cpp  test.py  test_label.py
